SeguradoPessoaMediator esta passando em todos os testes